--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
 <head>
-	<title>Apeman | Vouch</title>
-	<meta name="title" content="Apeman | Vouch" />
-	<meta property="og:title" content="Apeman | Vouch" />
+	<title>haggled | Vouch</title>
+	<meta name="title" content="haggled | Vouch" />
+	<meta property="og:title" content="haggled | Vouch" />
 
 	<!-- Tittel av embed -->
-	<meta property="og:site_name" content="Apeman's Vouch" />
+	<meta property="og:site_name" content="haggled's Vouch" />
 
 	<!-- Midten highlight blue med link embed -->
-	<meta property="twitter:title" content="Apeman's Vouch | Trusted by all" />
+	<meta property="twitter:title" content="haggled's Vouch | Trusted by all" />
 
 	<!-- Description bottom of embed -->
-	<meta name="description" content="Official vouches and backup of Apeman's Shop." />
-	<meta property="og:description" content="Official vouches and backup of Apeman's Shop." />
+	<meta name="description" content="Official vouches and backup of haggled's Shop." />
+	<meta property="og:description" content="Official vouches and backup of haggled's Shop." />
 
-	<meta property="og:image" content="https://apeman.us/favicon.png" />
+	<meta property="og:image" content="https://haggled.gg/favicon.png" />
 	<meta content="#F7C099" name="theme-color" />
-	<link rel="icon" type="image/x-icon" href="https://apeman.us/favicon.ico" />
+	<link rel="icon" type="image/x-icon" href="https://haggled.gg/favicon.ico" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="index.html" />
 
@@ -36,7 +36,7 @@
 </head>
 
 <div class="container-nav">
-	<a target="_blank" class="nav icon" id="discord"><svg alt="Apeman_Discord" xmlns="http://www.w3.org/2000/svg"
+	<a target="_blank" class="nav icon" id="discord"><svg alt="haggled_Discord" xmlns="http://www.w3.org/2000/svg"
 			viewBox="0 0 100 100">
 			<g id="Layer_2" data-name="Layer 2">
 				<g id="Layer_1-2" data-name="Layer 1">
@@ -51,7 +51,7 @@
 		</svg></a>
 
 	<div class="logo-nav logonav ">
-		<a href="http://store.apeman.us" target="_blank">
+		<a href="http://store.haggled.gg" target="_blank">
 			<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 676.86 212.61">
 				<path class="cls-1"
 					d="M528.07,571.28H509.39l-.12-.13a.22.22,0,0,1-.06-.13c0-.39,0-.77,0-1.16l0-157.58c0-.09.08-.17.15-.34H527a25.4,25.4,0,0,1,.12,4.18c0,1.36,0,2.72,0,4.09v16.86c.75-.37,1.26-.61,1.75-.87l33-17.77c3.68-2,7.36-4,11-6a4.92,4.92,0,0,1,2.49-.62c3.84,0,7.69,0,11.53,0,.33,0,.67,0,1.17.08.05,2,0,3.89,0,5.82s0,3.8,0,5.69,0,3.9,0,5.84v5.88c.69-.31,1.16-.5,1.62-.73q22-10.92,44-21.84a6.65,6.65,0,0,1,3.21-.75c3.89,0,7.78,0,11.67,0H650l.17.18s.08.08.08.11q0,79.1.07,158.17c0,.28,0,.57-.06.83-1.15.25-17,.3-18.8.05,0-.58-.06-1.2-.06-1.82q0-33.48,0-67,0-33.78,0-67.56v-1.9a2.82,2.82,0,0,0-1.76.54q-11.4,5.53-22.79,11.1l-16.25,7.91c-.48.23-.94.49-1.5.79V571.13c-1.23.26-17.12.31-18.9.06q0-7.61,0-15.25t0-15.46V433.07a2,2,0,0,0-.27-.16.26.26,0,0,0-.15,0,3.55,3.55,0,0,0-.54.21l-40.47,21.68a4.52,4.52,0,0,0-.62.47c0,5.44,0,11,0,16.51s0,11,0,16.48v83Z"
@@ -97,7 +97,7 @@
 <body>
 	<div class="container">
 		<h2 style="font-weight: 500">
-			Welcome to <b>Apeman's</b> Official Vouch list!
+			Welcome to <b>haggled's</b> Official Vouch list!
 		</h2>
 		<p>
 			All of the vouches from my Discord, Steam or thirdparty servers have
@@ -105,18 +105,18 @@
 		</p>
 		<p>
 			For steam points prices and information, use my calculator: <a
-				href="https://apeman.us/calculator">apeman.us/calculator/</a>
+				href="https://haggled.gg/calculator">haggled.gg/calculator/</a>
 		</p>
 		<p>
 			For cheap Accounts services like <b>Netflix UHD/HD</b>, <b>NordVPN</b>, <b>Spotify</b>, <b>CrunchyRoll</b>,
 			Discord <b>Classic</b> & <b>Nitro</b> and more! <br>Visit my
-			store for prices: <a href="https://store.apeman.us/">store.apeman.us</a>
+			store for prices: <a href="https://store.haggled.gg/">store.haggled.gg</a>
 		</p>
 	</div>
 
 	<div class="alert hide">
 		<span class="fab fa-discord fa-2x"></span>
-		<span class="msg">Discord: <b>apeman#0001</b></span>
+		<span class="msg">Discord: <b>haggled#0001</b></span>
 		<div class="close-btn">
 			<span class="fas fa-times"></span>
 		</div>
@@ -124,7 +124,7 @@
 
 	<!--<div class="alert1 hide1">
 		<span class="fab fa-discord fa-2x"></span>
-		<span class="msg">Discord1: <b>apeman#0001</b></span>
+		<span class="msg">Discord1: <b>haggled#0001</b></span>
 		<div class="close-btn1">
 			<span class="fas fa-times"></span>
 		</div>
@@ -133,7 +133,7 @@
 	<!--<div class="popup">
 		<div class="contentBox">
 			<div class="imgBox">
-				<a href="LINK"><img src="resources/images/apeman.png"></a>
+				<a href="LINK"><img src="resources/images/haggled.png"></a>
 			</div>
 			<div class="close">
 				<a href="#" class="closeButton">Close</a>	
@@ -182,7 +182,7 @@
 			<div class="credits">
 				<p>
 					Made with <i class="far fa-heart" style="color: red"></i> by
-					<a id="footerName" href="http://apeman.us" target="_blank">apeman#0001</a>
+					<a id="footerName" href="http://haggled.gg" target="_blank">haggled#0001</a>
 				</p>
 			</div>
 		</div>
